--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -16,7 +16,7 @@
   "language": "Language",
   "total_emp": "Total employees",
   "total_dep": "Total departments",
-  "search": "Search here...",
+  "search": "Search by name, mobile and NIC",
   "name": "Full name",
   "emp": "Employees",
 
@@ -66,7 +66,8 @@
   },
   "mobile": {
     "hint": "Mobile Number",
-    "empty": "Enter mobile number"
+    "empty": "Enter mobile number",
+    "title": "Mobile"
   },
   "nationality": {
     "hint": "Nationality",
@@ -145,9 +146,11 @@
     "hint": "Course Type",
     "empty": "Enter the course name"
   },
+  "age": "Age",
 
   "sign_in": "Sign In",
   "done": "Done",
+  "empty_education": "No education qualifications found",
 
   "emp_creation_success": "Employee added successfully!",
   "success": "Success"
